予測するのを30分先に変更
