# forecast-server-lib/src/lib.rs
@@ -14,10 +14,10 @@ pub const API_VERSION: &'static str = "1.0.0";
 
 #[derive(Debug, PartialEq, Serialize, Deserialize)]
 #[must_use]
-pub enum ForecastAfter5minRateIdModelNoGetResponse {
+pub enum ForecastAfter30minRateIdModelNoGetResponse {
     /// 取得成功
     Status200
-    (models::ForecastAfter5minRateIdModelNoGet200Response)
+    (models::ForecastAfter30minRateIdModelNoGet200Response)
     ,
     /// 取得失敗（レート情報もしくはモデルが見つからない）
     Status404
@@ -55,12 +55,12 @@ pub trait Api<C: Send + Sync> {
         Poll::Ready(Ok(()))
     }
 
-    /// 5分後の予想を取得します
-    async fn forecast_after5min_rate_id_model_no_get(
+    /// 30分後の予想を取得します
+    async fn forecast_after30min_rate_id_model_no_get(
         &self,
         rate_id: String,
         model_no: i32,
-        context: &C) -> Result<ForecastAfter5minRateIdModelNoGetResponse, ApiError>;
+        context: &C) -> Result<ForecastAfter30minRateIdModelNoGetResponse, ApiError>;
 
     /// レート履歴を新規登録します
     async fn rates_post(
@@ -78,12 +78,12 @@ pub trait ApiNoContext<C: Send + Sync> {
 
     fn context(&self) -> &C;
 
-    /// 5分後の予想を取得します
-    async fn forecast_after5min_rate_id_model_no_get(
+    /// 30分後の予想を取得します
+    async fn forecast_after30min_rate_id_model_no_get(
         &self,
         rate_id: String,
         model_no: i32,
-        ) -> Result<ForecastAfter5minRateIdModelNoGetResponse, ApiError>;
+        ) -> Result<ForecastAfter30minRateIdModelNoGetResponse, ApiError>;
 
     /// レート履歴を新規登録します
     async fn rates_post(
@@ -116,15 +116,15 @@ impl<T: Api<C> + Send + Sync, C: Clone + Send + Sync> ApiNoContext<C> for Contex
         ContextWrapper::context(self)
     }
 
-    /// 5分後の予想を取得します
-    async fn forecast_after5min_rate_id_model_no_get(
+    /// 30分後の予想を取得します
+    async fn forecast_after30min_rate_id_model_no_get(
         &self,
         rate_id: String,
         model_no: i32,
-        ) -> Result<ForecastAfter5minRateIdModelNoGetResponse, ApiError>
+        ) -> Result<ForecastAfter30minRateIdModelNoGetResponse, ApiError>
     {
         let context = self.context().clone();
-        self.api().forecast_after5min_rate_id_model_no_get(rate_id, model_no, &context).await
+        self.api().forecast_after30min_rate_id_model_no_get(rate_id, model_no, &context).await
     }
 
     /// レート履歴を新規登録します
